# qhyccd-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lcov.info
.cargo/: config.toml
.github/: codecov.yml
.github/workflows/: check.yml  nostd.yml  safety.yml  scheduled.yml  test.yml
docs/: qhyccd-rs.md
libqhyccd-sys/: Cargo.toml  build.rs  lib.rs
libqhyccd-sys/qhyccd-sdk/aarch64/: libqhyccd.so.20
libqhyccd-sys/qhyccd-sdk/x86_64/: libqhyccd.so.20
libqhyccd-sys/sdk_Arm64_24.12.26/sbin/: fxload
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/DownloadFirmware/.svn/: entries
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/LiveFrameMode/: LiveFrameSample.cpp
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/LiveFrameMode/.svn/: entries
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/LiveFrameMode_PCIE_Raw_Riffa/: Makefile
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/SingleFrameMode/: SingleFrameMode
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/SingleFrameMode/.svn/: entries
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/SingleFrameMode/.svn/text-base/: Makefile.svn-base
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/cmake_demo/base_test/: main.cpp
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/cmake_demo/cmake/: FindLibQHYCCD.cmake
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/cmake_demo/test_base/: main.cpp
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/cmake_demo/test_live_opencv/: main.cpp
libqhyccd-sys/sdk_Arm64_24.12.26/usr/local/testapp/cmake_demo/test_single_opencv/: main.cpp
libqhyccd-sys/sdk_linux64_24.12.27/: distclean.sh  install.sh  uninstall.sh
libqhyccd-sys/sdk_linux64_24.12.27/sbin/: fxload
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/riffa_linux_driver/: Makefile  riffa_driver.c
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/DownloadFirmware/.svn/: entries
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/LiveFrameMode/: LiveFrameSample  qhyccd.ini
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/LiveFrameMode/.svn/: entries
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/LiveFrameMode_PCIE_Raw_Riffa/: LiveFrameSample.cpp
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/SingleFrameMode/: SingleFrameMode  SingleFrameMode.cpp
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/SingleFrameMode/.svn/: entries
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/cmake_demo/test_base/: CMakeLists.txt
libqhyccd-sys/sdk_linux64_24.12.27/usr/local/testapp/cmake_demo/test_single_opencv/: CMakeLists.txt
src/: backend.rs  control.rs  error.rs  filter_wheel.rs  lib.rs  mocks.rs  sdk.rs  sdk_tests.rs  test_camera.rs  test_filter_wheel.rs  test_sdk.rs  test_simulation.rs  types.rs
src/camera/: configuration.rs  imaging.rs  info.rs  lifecycle.rs  mod.rs  parameters.rs  readout_modes.rs
src/simulation/: config.rs  image_generator.rs  mod.rs  state.rs  test_state.rs
src/tests/: camera_tests.rs  filter_wheel_tests.rs  mod.rs  sdk_tests.rs
tests/: cucumber.rs  simulation_tests.rs
tests/common/: mod.rs
tests/features/book/: cucumber.feature
tests/features/sdk/: new.feature
tests/simulation/: camera_tests.rs  config_tests.rs  image_generator_tests.rs  mod.rs
