[package]
name = "qhyccd-rs"
version = "0.1.4"
authors = ["Igor von Nyssen<igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera"]
repository = "https://github.com/ivonnyssen/qhyccd-rs"
documentation = "https://docs.rs/qhyccd-rs"
description = """
Rust bindings for the QHYCCD SDK. 
This crate provides a safe interface to the QHYCCD SDK for controlling QHYCCD cameras, filter wheels and focusers.
The libqhyccd-sys crate provides the raw FFI bindings. It uses tracing for logging and eyre for error handling.
"""
categories = ["astronomy", "api-bindings"]
homepage = "https://github.com/ivonnyssen/qhyccd-rs/wiki"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libqhyccd-sys = { version = "0.1.1", path = "libqhyccd-sys" }
eyre = "0.6.11"
thiserror = "1.0.51"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
educe = "0.5.9"

#to make Zminimal happy
tracing-attributes = "0.1.27"
enum-ordinalize-derive = "4.2.8"

[dev-dependencies]
mockall = { version = "0.12.1", features = [] }
