[package]
name = "qhyccd-rs"
version = "0.1.6"
authors = ["Igor von Nyssen<igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera"]
repository = "https://github.com/ivonnyssen/qhyccd-rs"
documentation = "https://docs.rs/qhyccd-rs"
description = """
Rust bindings for the QHYCCD SDK. 
This crate provides a safe interface to the QHYCCD SDK for controlling QHYCCD cameras, filter wheels and focusers.
The libqhyccd-sys crate provides the raw FFI bindings. It uses tracing for logging and eyre for error handling.
"""
categories = ["astronomy", "api-bindings"]
homepage = "https://github.com/ivonnyssen/qhyccd-rs/wiki"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libqhyccd-sys = { version = "0.1.2", path = "libqhyccd-sys" }
eyre = "0.6.12"
thiserror = "2.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
educe = "0.6.0"

#to make Zminimal happy
tracing-attributes = "0.1.28"
#enum-ordinalize-derive = "4.3.1"
itertools = "0.12.1"
num-bigint = "0.4.6"
sharded-slab = "0.1.7"
lazy_static = "1.5.0"

[dev-dependencies]
mockall = { version = "0.13.1", features = [] }
