[package]
name = "qhyccd-rs"
version = "0.1.7"
edition ="2021"
rust-version = "1.68.0" # for proc-macro2 v1.0.104
authors = ["Igor von Nyssen<igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera"]
repository = "https://github.com/ivonnyssen/qhyccd-rs"
documentation = "https://docs.rs/qhyccd-rs"
description = """
Rust bindings for the QHYCCD SDK.
This crate provides a safe interface to the QHYCCD SDK for controlling QHYCCD cameras, filter wheels and focusers.
The libqhyccd-sys crate provides the raw FFI bindings. It uses tracing for logging and eyre for error handling.
"""
categories = ["aerospace", "api-bindings"]
homepage = "https://github.com/ivonnyssen/qhyccd-rs/wiki"

[features]
default = []
simulation = ["rand"]

[dependencies]
libqhyccd-sys = { version = "0.1.4", path = "libqhyccd-sys" }
eyre = "0.6.12"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
educe = "0.6.0"
rand = { version = "0.9.2", optional = true }

#to make Zminimal happy
tracing-attributes = "0.1.28"
enum-ordinalize-derive = "4.3.1"
lazy_static = "1.0.2"

[dev-dependencies]
mockall = { version = "0.14.0", features = [] }
