[package]
name = "libqhyccd-sys"
version = "0.1.4"
edition = "2021"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
links = "qhyccd"
repository = "https://github.com/ivonnyssen/qhyccd-rs"
license = "MIT OR Apache-2.0"
description = "Rust bindings for QHY CCD SDK"
rust-version = "1.68.0" # for proc-macro2 v1.0.104
exclude = ["qhyccd-sdk/*"]

[lib]
name = "libqhyccd_sys"
path = "lib.rs"

[dependencies]

[features]
#will use the libqhyccd included in this crate - SDK version 25.09.29
vendored = []
